--- a/package.json
+++ b/package.json
@@ -7,13 +7,34 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.13.2",
+    "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.22.1",
+    "framer-motion": "^12.23.25",
+    "gsap": "^3.13.0",
+    "mammoth": "^1.11.0",
+    "node-fetch": "^2.7.0",
+    "openai": "^6.10.0",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.449",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1",
+    "three": "^0.160.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "node server.js",
+    "server:ollama": "node server-ollama.js",
+    "server:groq": "node server-groq.js",
+    "dev": "concurrently \"npm run server\" \"npm start\"",
+    "dev:ollama": "concurrently \"npm run server:ollama\" \"npm start\"",
+    "dev:groq": "concurrently \"npm run server:groq\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
