--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-cv-form",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://moumengabsi.github.io/ai-cv-form",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -28,6 +29,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "server": "node server.js",
     "server:ollama": "node server-ollama.js",
@@ -56,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
